name:                chain
version:             0.1.0.0
description:         Please see the README on the Nest at <https://nest.pijul.com/lthms/chain.hs>
homepage:            https://nest.pijul.com/lthms/chain.hs#readme
bug-reports:         https://nest.pijul.com/lthms/chain.hs/discussions
author:              lthms
maintainer:          contact@thomasletan.fr
copyright:           2018 Thomas Letan
build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:  README.md

source-repository head
  type:              pijul
  location:          https://nest.pijul.com/lthms/chain.hs

library
  exposed-modules:   Control.Monad.Chain
                   , Data.TypeSet
  other-modules:
  hs-source-dirs:    src
  build-depends:     base >=4.7 && <5
                   , mtl
  default-language:  Haskell2010

executable chain-exe
  main-is:           Main.hs
  hs-source-dirs:    app
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  build-depends:     base >=4.7 && <5
                   , chain
                   , mtl
  default-language:  Haskell2010

test-suite chain-test
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  build-depends:     base
                   , hspec
                   , chain
  default-language:  Haskell2010
  other-modules:     ChainSpec
  hs-source-dirs:    test
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N1