name:                chain-fs
version:             0.1.0.0
description:         Please see the README on the Nest at <https://nest.pijul.com/lthms/chain.hs>
homepage:            https://nest.pijul.com/lthms/chain.hs
bug-reports:         https://nest.pijul.com/lthms/chain.hs/discussions
author:              lthms
maintainer:          contact@thomasletan.fr
copyright:           2018 Thomas Letan
build-type:          Simple
cabal-version:       >= 1.10

extra-source-files:  README.md

source-repository head
  type:              pijul
  location:          https://nest.pijul.com/lthms/chain.hs

library
  exposed-modules:   Control.Monad.Chain.Fs
                   , Control.Monad.Chain.Console
  hs-source-dirs:    src
  build-depends:     base >=4.7 && <5
                   , chain
                   , text
  default-language:  Haskell2010

executable chain-fs-exe
  main-is: Main.hs
  other-modules:
      Paths_chain_fs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:     base >=4.7 && <5
                   , chain
                   , chain-fs
                   , text
  default-language: Haskell2010